@@ -6,12 +6,11 @@
 
 LONG InterlockedDecrement(LONG volatile *Addend)
 {
-  unsigned char c;
-  unsigned char s;
-  __asm__ __volatile__(
-    "lock ; subl $1,%0; sete %1 ; sets %2"
-    :"=m" (*Addend), "=qm" (c), "=qm" (s)
-    :"m" (*Addend) : "memory");
-  return (c != 0 ? 0 : (s != 0 ? -1 : 1));
+  LONG ret, value = -1;
+  __asm__ ("lock\n\t"
+	       "xaddl %0,(%1)"
+	       : "=r" (ret)
+	       : "r" (Addend), "0" (value)
+	       : "memory");
+  return ret - 1;
 }
-
